--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
-$primary:black;
-$primary-hover: black;
+$primary: #C32BAD;
+$primary-hover: #7027A0;
 $secondary: #F8F8F8;
 $pure: #fff;
 $dark: #232323;
