--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -115,7 +115,7 @@ section.status {
     color: inherit;
 }
 .status-box ul li:nth-child(1) span:before {
-    content: '\f46c';
+    content: '\f481'
 }
 
 .status-box ul li:nth-child(2) span:before {
@@ -123,7 +123,7 @@ section.status {
 }
 
 .status-box ul li:nth-child(3) span:before {
-    content: '\f818';
+    content: '\f466';
 }
 
 .status-box ul li:nth-child(4) span:before {
