--- a/resources/views/errors/404.ejs
+++ b/resources/views/errors/404.ejs
@@ -1,1 +1,2 @@
-<h1>Page not found. ( from 404 ejs)</h1>
+<p class="text-gray-500 text-lg mb-12 mx-auto text-center">Oops! Page Not Found.</p>
+<img class="w-2/5 mx-auto" src="/img/404.png" alt="empty-cart">
