--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Realtime pizza app</title>
+    <title>Pharmanix app</title>
+    <link rel="shortcut icon" type="image/png" href="/img/medi-logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet"
@@ -15,7 +16,9 @@
 <body>
     <nav class="container mx-auto flex items-center justify-between py-4">
         <div>
-            <a href="/"><img src="/img/logo.png" alt="logo"></a>
+            <a class="flex items-center" href="/"><img class="h-1/6 w-1/6 px-4" src="/img/medi-logo.png" alt="logo"> <p>
+              <b> PHARMANIX</b>
+            </p> </a>
         </div>
         <div>
             <ul class="flex items-center">
